tests/NormalTests/paczka1/fuzzy1/47340263.err
Error in line 5: 1kn A844 19,43
Error in line 7: 1kn S917 39,8
Error in line 6: A546 A844 40,7
Error in line 9: 1kn A619 9,2
Error in line 12: A546 A546 25,3
Error in line 1: R6hs A619 37,6
Error in line 14: A546 A844 56,4
Error in line 29: R6hs S917 67,4
